# engineering-lab

./: LICENSE  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/scripts/: normalize-remind.js
.github/workflows/: ci-all.yml  daily-summary.lock.yml  daily-summary.md  grumpy-reviewer.lock.yml  grumpy-reviewer.md  reminder-check.yml  reminder-create.yml  security-scan.yml  stale-manager.lock.yml  stale-manager.md  taiwan-grumpy-reviewer-auto.lock.yml  taiwan-grumpy-reviewer-auto.md  taiwan-grumpy-reviewer.lock.yml  taiwan-grumpy-reviewer.md  todo-to-issue.yml
.secrets/: credentials.txt
src/: broken_math.py
src/englab/: broken_math.py  even_worse_code.py  reviewer_trigger_bad_code.py  terrible_code.py
tests/: test_broken_math.py
